--- a/sample-react-app/manifest.yml
+++ b/sample-react-app/manifest.yml
@@ -6,4 +6,4 @@ applications:
   buildpacks:
     - https://github.com/cloudfoundry/staticfile-buildpack.git
   memory: 256M
-  random-route: false
+  random-route: falsetrue
